--- a/styles.css
+++ b/styles.css
@@ -130,14 +130,6 @@ footer {
 }
 
 /*Navigation*/
-/*nav ul {
-    background-color: #030a8c;
-    color:#ffffff;
-    width: 100%;
-    top: 0;
-    padding: 5px 5px 5px 5px;
-    margin-right: 5px;
-}*/
 nav a:hover{
     background-color: #590242;
     color: #ffffff;
@@ -313,6 +305,7 @@ dl {
         background-color: #030a8c;
         color:#ffffff;
         top: 0;
+        margin: -5px;
     }
     nav a:hover{
         background-color: #590242;
