--- a/styles.css
+++ b/styles.css
@@ -171,8 +171,6 @@ dl {
 #playlists .yp {
     background-color: #0D8Dfb;
     color:#ffffff;
-    margin: 3px;
-    padding: 4px;
 }
 
 /*Curated Playlist*/
@@ -181,7 +179,7 @@ dl {
     float:none;
 }
 #curated h2 {
-    color:#590242
+    color:#590242;
 }
 #curated h3,p {
     color: #ffffff;
@@ -189,8 +187,7 @@ dl {
 #curated .cp {
     background-color:#020659;
     color:#ffffff;
-    margin: 3px;
-    padding: 4px;
+
 }
 /*Playlist Grid*/
 #playlists ~ #curated {
@@ -289,14 +286,14 @@ dl {
     }
     main {
         background-color: #ffffff;
-        display: grid;
     }
     /*Navigation*/
     nav ul {
         background-color: #030a8c;
         color:#ffffff;
         top: 0;
-        margin: 10px;
+        display:grid;
+
     }
     nav a:hover{
         background-color: #590242;
