--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,15 @@ dl {
     main {
         background-color: #ffffff;
     }
+    [href="#home"]{
+        position: absolute;
+        bottom: 0px;
+        left: 90px;
+        padding: 0px;
+        font-size: 25px;
+        color: #ffffff;
+      }
+    
     /*Navigation*/
     nav ul {
         background-color: #030a8c;
