--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,9 @@ table {
 * {
   margin: 0;
   padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 ul {
     overflow: hidden;
     max-height: 0;
@@ -87,7 +89,7 @@ ul {
 #dropdown span:after {
     top: -5px;
 }
-.dropdown {
+#dropdown {
     display: none;
 }
 input:checked ~ ul {
@@ -145,6 +147,7 @@ footer {
     position: relative;
     clear: both;
     color: #590242;
+    z-index: 5;
 }
 
 /*Navigation*/
