--- a/styles.css
+++ b/styles.css
@@ -215,11 +215,11 @@ nav h2 {
     color:#ffffff;
 }
 #playlists .yp img {
-  z-index: 1;
   float: left;
   display: flex;
  flex-direction:column;
  overflow-y: hidden;
+ overflow-x: scroll;
   overflow: hidden;
 }
 /*Curated Playlist*/
@@ -238,11 +238,11 @@ nav h2 {
     color:#ffffff;
 }
  #curate .cp img {
-      z-index: 1;
       float: left;
       display: flex;
       flex-direction: column;
       overflow-x: hidden;
+      overflow-x: scroll;
       overflow: hidden;
 }
 /*Playlist Grid*/
@@ -306,25 +306,23 @@ nav h2 {
   }
 
   /*Scroll*/
-  .scroll, .scroll1, .scroll2 {
+  .scroll {
     grid-template-columns: repeat(5, 1fr);
     overflow: scroll;
     overflow-y: hidden;
     position: relative;
   }
-
-  .scroll,.scroll1, .scroll2 section {
+ .scroll section {
     margin: 10px;
     position: relative;
   }
-  .scroll, .scroll1, .scroll2 div {
+  .scroll div {
     position: absolute;
-    top: 251px;
+    top: 250px;
     background-color:#ebe3e3;
     padding: 5px;
     height: 50px;
     width: 350px;
-    display: grid;
   }
   /*Buttons*/
   #more-trending, #all-your-playlists, #more-curated {
