--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ main {
 }
 h1 {
   font-size:1.25em;
+  color:#ffffff
 }
 h2, h3 {
   font-size: 1em;
@@ -169,7 +170,7 @@ nav li {
 nav li a {
   text-decoration: none;
   color: #ffffff;
-  padding: 1px;
+  padding: 3px;
   display: block;
 }
 nav a:hover{
@@ -180,7 +181,7 @@ nav h2 {
     visibility: hidden;
     display: none;
   }
-  .muzamaker {
+.muzamaker {
     font-size: 25px;
     text-transform: capitalize;
     color: #ffffff;
@@ -393,10 +394,11 @@ nav h2 {
     text-transform: capitalize;
     color: #ffffff;
     margin: .5px;
+     visibility: visible;
     }
     
     /*Navigation*/
-   nav {
+nav {
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -414,28 +416,25 @@ nav li {
 nav li a {
   text-decoration: none;
   color: #ffffff;
-  padding: 1px;
+  padding: 3px;
   display: block;
-}
-nav li #home {
-  visibility: visible;
 }
 nav a:hover{
     background-color: #590242;
     color: #ffffff;
 }
-    nav h2 {
-        visibility: hidden;
-        display: none;
-      }
-    /*Trending Playlist*/
+nav h2 {
+  visibility: hidden;
+  display: none;
+ }
+/*Trending Playlist*/
      
-     /*Your Playlists*/
+ /*Your Playlists*/
 
-    /*Curated Playlist*/
+ /*Curated Playlist*/
     
 
-   /* #playlists ~ #curated {
+/* #playlists ~ #curated {
     grid-auto-flow: row;
     }
     #curated ~ #playlists {
