--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,11 @@ h1 {
 }
 h2, h3 {
   font-size: 1em;
+  color:#ffffff
 }
 p, dl, dd {
   font-size: 1em;
+  color:#ffffff
 }
 footer p {
   font-size: .75em;
