update html and css

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ table {
 	border-spacing: 0;
 }
 
-/*Menu Code for Mobile First Style (minus the bits you know how to do): */
+/*Menu Code for Mobile First Style (minus the bits you know how to do):
+----------------------------------------------------------------------------------- */
 * {
   margin: 0;
   padding: 0;
@@ -107,7 +108,8 @@ input:checked ~ #dropdown span:after {
 input:checked ~ #dropdown:not(.steps) span:before, input:checked ~ #dropdown:not(.steps) span:after {
     top: 0;
 }
-/*HTML,Body,Header,Main,Text,Footer*/
+/*HTML,Body,Header,Main,Text,Footer
+-------------------------------------------------------*/
 html {
     background-color: #020659;
 }
@@ -155,7 +157,8 @@ footer {
     z-index: 5;
 }
 
-/*Navigation*/
+/*Navigation
+--------------------------------------*/
 nav {
   display:flex;
   justify-content: space-between;
@@ -192,8 +195,9 @@ nav h2 {
     margin: .5px;
     display: block;
   }
-  /*Trending Playlist*/
-/*#trending {
+  /*Trending Playlist
+  --------------------------------*/
+#trending {
     display: flex;
     align-self: center;
     justify-self: center;
@@ -208,6 +212,8 @@ nav h2 {
   overflow-y: hidden;
   display: flex;
   flex-direction: row;
+  height: 350px;
+  width: 50px;
 }
 #trending dl {
     display: flex;
@@ -222,9 +228,10 @@ nav h2 {
 #trending h3 {
     color: #590242;
     margin: 2px;
-}*/
+}
 
-  /*Your Playlists*/
+  /*Your Playlists
+  -------------------------------------*/
 /*#playlists {
     background-color: #2699fb;
     float: none;
@@ -246,9 +253,12 @@ nav h2 {
  overflow-y: hidden;
  overflow-x: scroll;
   overflow: hidden;
+  height: 350px;
+  width: 50px;
 }*/
 
-/*Curated Playlist*/
+/*Curated Playlist
+-----------------------------------*/
 /*#curated {
     background-color: #2104d9;
     float:none;
@@ -270,9 +280,12 @@ nav h2 {
       overflow-x: hidden;
       overflow-x: scroll;
       overflow: hidden;
+      height: 350px;
+      width: 50px;
 }*/
 
-/*Playlist Grid*/
+/*Playlist Grid
+---------------------------------------*/
 /*#playlists ~ #curated {
     grid-auto-flow: column;
 }*/
@@ -297,8 +310,9 @@ nav h2 {
   }*/
  
 
-  /* Scrollbar */
- /* #trending ::-webkit-scrollbar {
+  /* Scrollbar
+  -------------------------------- */
+ #trending ::-webkit-scrollbar {
     width: 15px;
   }
   #trending ::-webkit-scrollbar-track { 
@@ -330,10 +344,11 @@ nav h2 {
   #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
     background: #020659;
 
-  }*/
+  }
 
-  /*Scroll*/
- /* .scroll {
+  /*Scroll
+  ------------------------------------*/
+  .scroll {
     grid-template-columns: repeat(5, 1fr);
     overflow: scroll;
     overflow-y: hidden;
@@ -350,8 +365,9 @@ nav h2 {
     padding: 5px;
     height: 50px;
     width: 350px;
-  }*/
-  /*Buttons*/
+  }
+  /*Buttons
+  ------------------------------------*/
   #more-trending, #all-your-playlists, #more-curated {
  background-color: #590242;
   font: 1em sans-serif;
@@ -360,7 +376,7 @@ nav h2 {
   float: none;
   position: relative;
 }
-.button:hover {
+.button a:hover {
   background-color: #020659;
 }
 
@@ -376,7 +392,8 @@ nav h2 {
     #dropdown span, input {
         display: none;
     }
-    /*HTML,Body,Header,Main,Text,Footer*/
+    /*HTML,Body,Header,Main,Text,Footer
+    --------------------------------------------------------------*/
     html {
         background-color: #020659;
     }
@@ -401,7 +418,8 @@ nav h2 {
     margin: .5px;
     }
     
-    /*Navigation*/
+    /*Navigation
+    -----------------------------------------------------*/
 nav {
   display:flex;
   justify-content: space-between;
@@ -431,11 +449,14 @@ nav h2 {
   visibility: hidden;
   display: none;
  }
-/*Trending Playlist*/
+/*Trending Playlist
+---------------------------------------------------------------*/
      
- /*Your Playlists*/
+ /*Your Playlists
+ ---------------------------------------------------------------*/
 
- /*Curated Playlist*/
+ /*Curated Playlist
+ ----------------------------------------------------------------*/
     
 
 /* #playlists ~ #curated {
