--- a/styles.css
+++ b/styles.css
@@ -159,9 +159,11 @@ footer {
 
 /*Navigation
 --------------------------------------*/
-nav ul {
+nav {
   margin: 0;
   padding: 0;
+}
+nav ul {
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -340,9 +342,11 @@ nav h2 {
     
     /*Navigation
     -----------------------------------------------------*/
-nav ul {
+nav {
   margin: 0;
   padding: 0;
+}
+nav ul {
   display:flex;
   justify-content: space-between;
   align-items: center;
