--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ nav h2 {
 
   /*Audio 
   -------------------------------------------------------------*/
-  audio::-webkit-media-controls-mute-button {
+ /* audio::-webkit-media-controls-mute-button {
     background-color: #ffffff;
     border-radius: 50%;
   }
@@ -229,12 +229,12 @@ nav h2 {
     bottom: 150px;
     left: 5px;
     border-radius: 10%;
-  }
+  }*/
  
 
   /* Scrollbar
   -------------------------------- */
- #trending ::-webkit-scrollbar {
+ /*#trending ::-webkit-scrollbar {
     width: 15px;
   }
   #trending ::-webkit-scrollbar-track { 
@@ -266,11 +266,11 @@ nav h2 {
   #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
     background: #020659;
 
-  }
+  }*/
 
   /*Scroll
   ------------------------------------*/
-  .scroll {
+  /*.scroll {
     grid-template-columns: repeat(5, 1fr);
     overflow: scroll;
     overflow-y: hidden;
@@ -287,7 +287,7 @@ nav h2 {
     padding: 5px;
     height: 50px;
     width: 350px;
-  }
+  }*/
   /*Buttons
   ------------------------------------*/
   #more-trending, #all-your-playlists, #more-curated {
