--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ footer {
 
 /*Navigation
 --------------------------------------*/
-nav ul {
+nav {
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -199,8 +199,7 @@ nav h2 {
   float: inline-start;
   overflow: hidden;
   overflow-x: scroll;
-  height: 25%;
-  width: 375px;
+ 
 }
   /*Your Playlists
   -------------------------------------*/
