--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav h2 {
   }
   /*Trending Playlist
   --------------------------------*/
-#trending {
+.trending {
   display: flex;
   align-self: center;
   justify-content: space-between;
