--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,6 @@ nav h2 {
   justify-content: space-between;
   float: inline-start;
   overflow: hidden;
-
 }
 
 .trend img {
@@ -206,6 +205,7 @@ nav h2 {
   overflow-y: hidden;
   display: flex;
   flex-direction: row;
+  overflow:scroll;
 }
 .trend dl {
     display: flex;
@@ -222,15 +222,23 @@ nav h2 {
     margin: 2px;
 }
 #trending h2 {
-  color:#590242
+  color:#590242;
 }
 
   /*Your Playlists
   -------------------------------------*/
-
+  .yp {
+    background-color: #2699fb;
+    float: none;
+    justify-content: space-between;
+  }
 /*Curated Playlist
 -----------------------------------------------------------------*/
-
+.cp {
+  background-color: #2104d9;
+  float:none;
+  justify-content: space-between;
+}
 
 /*Playlist Grid
 ---------------------------------------------------------------*/
